fixed word wrapping

--- a/Solution7/style.css
+++ b/Solution7/style.css
@@ -46,7 +46,7 @@ body, html, #root {
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 100%;
+    width: 95%;
     gap: 20px;
     justify-content: center;
 }
@@ -91,6 +91,7 @@ body, html, #root {
 
 .task p {
     width: 80%;
+    overflow-wrap: break-word;
 }
 
 .task__btns {
